# n1-todo

./: .gitignore  CHANGELOGS.md  CONTRIBUTING.md  README.md  pyproject.toml
migrations/versions/: 3f7113991f65_.py  4502a31dd702_.py
specs/: openapi.json
tests/: conftest.py  fixtures.json  test_todo_api.py
todo_api/: api.py  constants.py  db.py  fixtures.json  load_data.py
todo_api/todo/: models.py  resources.py  routes.py  schemas.py
