[tool.poetry]
name = "n1_api"
version = "0.1.0"
description = "N1 Todo API"
authors = ["Charles"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.2"
marshmallow = "^3.12.1"
SQLAlchemy = "^1.4.18"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
webargs = "^8.0.0"
Flask-Migrate = "^3.0.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.8.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
